--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.20.1",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
